[JBWS-4121] changes to support old and new -secmgr placement in wlfy scripts