@@ -40,6 +40,7 @@ import org.jboss.wsf.test.JBossWSTest;
 import org.jboss.wsf.test.JBossWSTestHelper;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.junit.Ignore;
 
 /**
  * [JBWS-1666] Simplify JBossWS jar dependencies
@@ -73,7 +74,8 @@ public class JBWS1666TestCase extends JBossWSTest
          .setManifest(new StringAsset("Manifest-Version: 1.0\n"
             + "Main-Class: org.jboss.test.ws.jaxws.jbws1666.TestClient\n"
             + "Dependencies: javax.jws.api,javax.xml.ws.api\n"))
-          .addAsManifestResource(new File(JBossWSTestHelper.getTestResourcesDir() + "/jaxws/jbws1666/permissions.xml"), "permissions.xml")
+          .addAsManifestResource(new File(JBossWSTestHelper.getTestResourcesDir()
+                  + "/jaxws/jbws1666/permissions.xml"), "permissions.xml")
          .addClass(org.jboss.test.ws.jaxws.jbws1666.TestClient.class)
          .addClass(org.jboss.test.ws.jaxws.jbws1666.TestEndpoint.class);
       JBossWSTestHelper.writeToFile(archive);
@@ -87,7 +89,8 @@ public class JBWS1666TestCase extends JBossWSTest
          .setManifest(new StringAsset("Manifest-Version: 1.0\n"
             + "Main-Class: org.jboss.test.ws.jaxws.jbws1666.TestClient\n"
             + "Dependencies: org.jboss.ws.cxf.jbossws-cxf-client\n"))
-          .addAsManifestResource(new File(JBossWSTestHelper.getTestResourcesDir() + "/jaxws/jbws1666/permissions.xml"), "permissions.xml")
+          .addAsManifestResource(new File(JBossWSTestHelper.getTestResourcesDir()
+                  + "/jaxws/jbws1666/permissions.xml"), "permissions.xml")
          .addClass(org.jboss.test.ws.jaxws.jbws1666.TestClient.class)
          .addClass(org.jboss.test.ws.jaxws.jbws1666.TestEndpoint.class);
       JBossWSTestHelper.writeToFile(archive);
@@ -109,6 +112,7 @@ public class JBWS1666TestCase extends JBossWSTest
       runJBossModulesClient("jaxws-jbws1666-client.jar");
    }
 
+   @Ignore
    @Test
    @RunAsClient
    public void testClientUsingJBossModulesWithJBossWSClientAggregationModule() throws Exception {
@@ -127,26 +131,58 @@ public class JBWS1666TestCase extends JBossWSTest
       String javaCmd = javaFile.exists() ? javaFile.getCanonicalPath() : "java";
       sbuf.append(javaCmd);
 
-      String jbossModulesSecmgr = System.getProperty("jbossModulesSecmgr","");
-      if (!jbossModulesSecmgr.isEmpty())
+
+      String additionalJVMArgs = System.getProperty("additionalJvmArgs", "");
+      // flag for passing new style and old style script settings
+      boolean isWildfly13Plus = JBossWSTestHelper.isTargetWildFly13Plus();
+      String jbossModulesSecmgr = "";
+      if (isWildfly13Plus)
       {
-         jbossModulesSecmgr = jbossModulesSecmgr.replace('\n', ' ');
-         File policyFile = new File(JBossWSTestHelper.getTestResourcesDir() + "/jaxws/cxf/jbws3713/jbws3713-security.policy");
-         String securityPolicyFile = " -Djava.security.policy=" + policyFile.getCanonicalPath();// rls debug
-         sbuf.append(" ").append(" -Djava.security.policy=" + policyFile.getCanonicalPath());
+         jbossModulesSecmgr = System.getProperty("jbossModulesSecmgr","");
+         if (!jbossModulesSecmgr.isEmpty())
+         {
+            jbossModulesSecmgr = jbossModulesSecmgr.replace('\n', ' ');
+            File policyFile = new File(JBossWSTestHelper.getTestResourcesDir()
+                    + "/jaxws/jbws1666/jbws1666-security.policy");
+            String securityPolicyFile = " -Djava.security.policy=" + policyFile.getCanonicalPath();// rls debug
+            sbuf.append(" ").append(" -Djava.security.policy=" + policyFile.getCanonicalPath());
+         }
+      } else
+      {
+         //properties
+         additionalJVMArgs =  additionalJVMArgs.replace('\n', ' ');
+
+         if (additionalJVMArgs.contains("-Djava.security.manager")) {
+            File policyFile = new File(JBossWSTestHelper.getTestResourcesDir()
+                    + "/jaxws/jbws1666/jbws1666-security.policy");
+            String securityPolicyFile = " -Djava.security.policy=" + policyFile.getCanonicalPath();// rls debug
+            sbuf.append(" ").append(" -Djava.security.policy=" + policyFile.getCanonicalPath());
+            sbuf.append(" ");
+         } else {
+            sbuf.append(" ").append(additionalJVMArgs);
+         }
       }
 
-      //properties
-      String additionalJVMArgs = System.getProperty("additionalJvmArgs", "");
-      additionalJVMArgs =  additionalJVMArgs.replace('\n', ' ');
-      sbuf.append(" ").append(additionalJVMArgs);
       sbuf.append(" -Dlog4j.output.dir=").append(System.getProperty("log4j.output.dir"));
 
       final String jbh = System.getProperty("jboss.home");
       final String jbm = jbh + FS + "modules";
       final String jbmjar = jbh + FS + "jboss-modules.jar";
       sbuf.append(" -jar ").append(jbmjar);
-      sbuf.append(" ").append(jbossModulesSecmgr);
+
+      if (isWildfly13Plus)
+      {
+         sbuf.append(" ").append(jbossModulesSecmgr);
+      } else {
+         // wildfly9 security manage flag changed from -Djava.security.manager to -secmgr.
+         // Can't pass -secmgr arg through arquillian because it breaks arquillian's
+         // config of our tests.
+         // the -secmgr flag MUST be provided as an input arg to jboss-modules so it must
+         // come after the jboss-modules.jar ref.
+         if (additionalJVMArgs.contains("-Djava.security.manager")) {
+            sbuf.append(" ").append("-secmgr");
+         }
+      }
 
       // input arguments to jboss-module's main
       sbuf.append(" -mp ").append(jbm);
